fixed project card spacing, added page titles, fixed navigation links

--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ a:hover {
 header,
 main {
   display: flex;
-  gap: 0.5rem;
+  gap: 1rem;
   max-width: var(--screen-lg);
   margin: 0 auto;
 }
@@ -125,6 +125,7 @@ ul.links > li:not(:last-child):after {
 
 .card > footer {
   display: flex;
+  gap: 0.5rem;
   flex-direction: column;
   width: 100%;
 }
